# merino

./: Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: cross_build_and_release.yml  pr.yml  release.yml
src/: lib.rs  main.rs
tests/: common.rs
