[package]
name = "merino"
version = "0.1.7"
description = "A SOCKS5 Proxy server written in Rust"
repository = "https://github.com/ajmwagar/merino"
readme = "README.md"
license = "MIT"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde = "1.0.215"
serde_derive = "1.0.204"
snafu = "0.8.5"
thiserror = "2.0.3"
tokio = { version = "1.42.0", features = ["full"] }
